Pod_define.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pods
  labels:
    app: my-app
spec:
  containers:
  - name: my-node
    image: my-node-server
    imagePullPolicy: Never
    ports:
    - containerPort: 3000
