lb_define.yaml
apiVersion : v1
kind: Service
metadata:
  name: my-lb
spec:
  selector :
    name : my-service
  ports:
    - port : 80
      targetPort : 90
  type : LoadBalancer
